# pelade_transmission_bot

./: .gitignore  Dockerfile  README.md  pyproject.toml
transmission_bot/: broker.py  cfg.py  settings_example.ini  telegram_bot.py
